--- a/template/package.json
+++ b/template/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@reduxjs/toolkit": "^1.9.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-exception-handler": "^2.10.10",
@@ -21,7 +22,9 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0"
+    "react-native-screens": "^3.19.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
